Crop bio content to fit

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -122,7 +122,7 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>If you’re after a football-mad dog person who can speak Dutch and loves electronica, Alex is your guy. He’s also a specialist in some useful things - like business analytics and data science, stakeholder relations and User Experience. Alex’s background is in industrial psychology, which sparked his interest in all things data. A recently returned Kiwi expat, he has previously worked for Stats NZ, Canterbury District Health Board, and a Dutch online accounting and business software company. When he’s not neck-deep in detail, he’s all about finding that perfect flat white, frequenting the local surf breaks, or producing some drum and bass tunes.</p>
+                  <p>If you’re after a football-mad dog person who can speak Dutch and loves electronica, Alex is your guy. He’s also a specialist in some useful things - like business analytics and data science, stakeholder relations and User Experience. Alex’s background is in industrial psychology, which sparked his interest in all things data. When he’s not neck-deep in detail, he’s all about finding that perfect flat white, frequenting the local surf breaks, or producing some drum and bass tunes.</p>
                   <div class="fancy-pants-font js-blog-link" data-blog-link="/author/alex"></div>
                 </div>
               </div>
@@ -276,7 +276,7 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>Elliot is a bit of a dark horse, pulling off a degree in Software Engineering from the University of Canterbury, while simultaneously serving as a “grunt” in the New Zealand Defence Force Army Reserve. Add to that a semester abroad and a growing love of kite surfing, and you’ll quickly realise Elliot can pack a lot into a day. He has a true love of app development (experience in both native and cross-platform) and User Experience design. In his role as a Support Developer, he will be front and centre helping our partners get the best from their bespoke software. A passion for all things code means you’ll also spot him eyeballs deep in some of our JS-based projects.</p>
+                  <p>Elliot is a bit of a dark horse, pulling off a degree in Software Engineering while simultaneously serving as a "grunt" in the New Zealand Defence Force Army Reserve. He has a true love of app development (experience in both native and cross-platform) and User Experience design. In his role as a Support Developer, he helps our partners get the best from their bespoke software. A passion for all things code means you’ll also spot him digging into some of our JS-based projects.</p>
                   <div class="fancy-pants-font js-blog-link" data-blog-link="/author/elliot"></div>
                 </div>
               </div>
@@ -312,7 +312,7 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>A self-confessed “super cliched Canadian”, Fiona loves her chihuahua Megatron, ice hockey and goes all out for Christmas. She loves crushing her to-do list(s) and deftly combines a passion for detail with all things organisation and finances. She also plays the most important office role - Whip Cracker in Chief. A pro in pointe shoes, Fi has promised to teach the devs some ballet &hellip;</p>
+                  <p>A self-confessed "super cliched Canadian", Fiona loves her chihuahua Megatron, ice hockey and goes all out for Christmas. She loves crushing her to-do list(s) and deftly combines a passion for detail with all things organisation and finances. She also plays the most important office role - Whip Cracker in Chief. A pro in pointe shoes, Fi has promised to teach the devs some ballet &hellip;</p>
                   <div class="fancy-pants-font js-blog-link" data-blog-link="/author/fiona"></div>
                 </div>
               </div>
@@ -748,7 +748,7 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>You’ll be hard pressed to find someone more mad on cricket than Onkar. Keen for a taste of Kiwi culture and a life down under, this fanatical Team India supporter joins us from Pune, India. Onkar is a developer by trade, with a wealth of experience working with startup companies, developing smart software tools to empower businesses. He has a decade of experience hitting the ground running with systems and solution architecture, technical consultation and project management. Onkar has a passion for Python and is always keen to get back to his coding roots. A self-proclaimed “foodie” (eater of excellent food) he is a welcome addition to the Media Suite lunch club.</p>
+                  <p>You’ll be hard pressed to find someone more mad on cricket than Onkar. This fanatical Team India supporter joins us from Pune, India. Onkar is a developer by trade, with a wealth of experience working with startup companies, developing smart software tools to empower businesses. He has a decade of experience with systems and solution architecture, technical consultation and project management. Onkar has a passion for Python and is always keen to get back to his coding roots.</p>
                   <div class="fancy-pants-font js-blog-link" data-blog-link="/author/onkar"></div>
                 </div>
               </div>
@@ -789,7 +789,7 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>The first thing you should know about Rae? She loves the colour purple, big time. The next most important things include her keen eye for lightweight, efficient processes and an instinct for people, communication and effective working relationships as we dive into awesome projects. She brings with her two decades of experience working with large ecommerce systems focusing on building robust, reliable and secure software. Rae loves getting her hands dirty up front, ensuring the problem is well-specified and we are building the right thing. A cricket buff, keen skier and recently returned expat, you’ll find her praising New Zealand weather, eating all the good things, and raving about having a lawn she can mow.</p>
+                  <p>The first thing you should know about Rae? She loves the colour purple, big time. The next most important things include her keen eye for lightweight, efficient processes and an instinct for people, communication and effective working relationships. She’s spent two decades focusing on building robust, reliable and secure software. A cricket buff, keen skier and recently returned expat, she’s all about the NZ weather and raving about having a lawn she can mow.</p>
                   <div class="fancy-pants-font js-blog-link" data-blog-link="/author/rae"></div>
                 </div>
               </div>
@@ -948,7 +948,7 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>If there’s a dog around, Subhra will find it and pat it. That’s a fact. Honorary Friday Office Dog, Ranger, can attest to that. Second to dogs is coding. Subhra brings some serious passion and a love of learning to his craft as a Media Suite full stack dev. Coding is his jam, and he’s up for any language or framework on offer. Despite having lived in Canterbury only three years, he’s just as passionate about his new home, and captures some stunning shots on his regular photographic adventures. He must be the first ever Suitey to describe himself as “not a foodie”, and thus will be gradually brainwashed.</p>
+                  <p>If there’s a dog around, Subhra will find it and pat it. That’s a fact. Second to dogs is coding. Subhra brings some serious passion and a love of learning to his craft as a Media Suite full stack dev. Coding is his jam, and he’s up for any language or framework on offer. Despite having lived in Canterbury only three years, he’s just as passionate about his new home, and captures some stunning shots on his regular photographic adventures.</p>
                   <div class="fancy-pants-font js-blog-link" data-blog-link="/author/stu"></div>
                 </div>
               </div>
