--- a/src/people/index.html
+++ b/src/people/index.html
@@ -368,42 +368,6 @@ menuorder: 4
       </div>
       <!-- .person-wrap -->
 
-      <!-- Gorrie -->
-      <div id="person-Gorrie" class="person-wrap js-iso-element">
-        <a href="#" class="person js-show-bio">
-          <div class="loader icon-spin1"></div>
-          <img class="person-image" src="{{ "/img/people/gorrie.png" | prepend: site.baseurl }}" alt="Gorrie Coe" />
-          <span class="burst-wrap scale-in">
-            <span class="burst-text fancy-pants-font lowercase">Bio</span>
-            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
-            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
-          </span>
-        </a>
-        <div class="bio-wrap">
-          <div class="bio-inner">
-            <div class="faux-table">
-              <div class="faux-table-cell">
-                <div class="bio-head">
-                  <h2 class="bio-heading">Gorrie Coe</h2>
-                  <h3 class="bio-sub">UI Developer</h3>
-                  <div class="js-image-fill bio-real-image">
-                    <img src="{{ "/img/people/real-gorrie.jpg" | prepend: site.baseurl }}" alt="Gorrie" />
-                  </div>
-                </div>
-                <div class="bio-body">
-                  <p>Raised in good old Timaru, Gorrie is now firmly entrenched in Christchurch, living in Woolston with his wife, young daughter and rescue dog, Ziggy. He loves a bit of CSS, JavaScript and PHP, with some Silverstripe experience in the mix. He’s all about big software projects and challenging problems to solve. Gorrie used to have hobbies, like running and gaming (all kinds), but since he became a dad, he’s more of a Lyttelton Farmers Market lover, playground enthusiast and pancake chef. You might spot him walking to work through the scenic Charlesworth Reserve.</p>
-                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/gorrie"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- .bio-inner -->
-        </div>
-        <!-- .bio-wrap -->
-        <h3 class="person-name-hover">Gorrie</h3>
-      </div>
-      <!-- .person-wrap -->
-
       <!-- James B -->
       <div id="person-james-brown" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
@@ -652,7 +616,7 @@ menuorder: 4
       <div id="person-mark" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image" src="{{ "/img/people/mark.png " | prepend: site.baseurl }}" alt="Mark Stufart" />
+          <img class="person-image" src="{{ "/img/people/mark.png " | prepend: site.baseurl }}" alt="Mark Stuart" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png " | prepend: site.baseurl }}" alt="" />
@@ -958,47 +922,6 @@ menuorder: 4
         </div>
         <!-- .bio-wrap -->
         <h3 class="person-name-hover">Subhra</h3>
-      </div>
-      <!-- .person-wrap -->
-
-      <!-- Tom -->
-      <div id="person-tom" class="person-wrap js-iso-element">
-        <a href="#" class="person js-show-bio">
-          <div class="loader icon-spin1"></div>
-          <img class="person-image" src="{{ "/img/people/tom.png " | prepend: site.baseurl }}" alt="Tom Fenton" />
-          <span class="burst-wrap scale-in">
-            <span class="burst-text fancy-pants-font lowercase">Bio</span>
-            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png " | prepend: site.baseurl }}" alt="" />
-            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png " | prepend: site.baseurl }}" alt="" />
-          </span>
-        </a>
-        <div class="bio-wrap">
-          <div class="bio-inner">
-            <div class="faux-table">
-              <div class="faux-table-cell">
-                <div class="bio-head">
-                  <h2 class="bio-heading">Tom Fenton</h2>
-                  <h3 class="bio-sub">DevOps Manager and Software Developer</h3>
-                  <span class="linkedin-container">
-                    <a href="https://www.linkedin.com/in/tfentonz/" class="linkedin-link" target="_blank">
-                      <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
-                    </a>
-                  </span>
-                  <div class="js-image-fill bio-real-image">
-                    <img src="{{ "/img/people/real-tom.jpg" | prepend: site.baseurl }}" alt="Tom Fenton" />
-                  </div>
-                </div>
-                <div class="bio-body">
-                  <p>Being tall, Tom has his head in the Cloud (think Amazon Web Services). An all-round troubleshooter, go-to guy, and Linux guru, the command-line-fu is strong with this one. When he isn't deploying to production, planning project infrastructure, or keeping our project lights on, Tom can be found splashing around in a nearby pool or ocean. His suspicious aversion to coffee makes him something of an office curiosity.</p>
-                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/tom"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- .bio-inner -->
-        </div>
-        <!-- .bio-wrap -->
-        <h3 class="person-name-hover">Tom</h3>
       </div>
       <!-- .person-wrap -->
 
