Fix typo in Sharmaine's bio

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -1118,7 +1118,7 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>Sharmaine lists her specialties as spreadsheets, nagging, timesheet tracking and ordering the weekly Learning Lunch eats. While these are incredibly valuable skills in our team (probably among the most valuable, if we’re honest), what Sharmaine really brings to the team is a superb eye for detail, an ability to juggle a To Do list as long as her arm and her knack for ensuring we’re always improving our efficiency and working smarter. In her down time she’s out exploring Canterbury and binge-wathcing murder mystery shows.</p>
+                  <p>Sharmaine lists her specialties as spreadsheets, nagging, timesheet tracking and ordering the weekly Learning Lunch eats. While these are incredibly valuable skills in our team (probably among the most valuable, if we’re honest), what Sharmaine really brings to the team is a superb eye for detail, an ability to juggle a To Do list as long as her arm and her knack for ensuring we’re always improving our efficiency and working smarter. In her down time she’s out exploring Canterbury and binge-watching murder mystery shows.</p>
                   <div class="fancy-pants-font js-blog-link" data-blog-link="/author/sharmaine"></div>
                 </div>
               </div>
