--- a/src/people/index.html
+++ b/src/people/index.html
@@ -1041,7 +1041,7 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>Making technology accessible and approachable is where Rhys spends his time. Finding solutions that making people's lives easier drives his work, and if he can achieve that while drinking coffee and chatting, even better. He's spent more than a decade in tech, gaining experience in product innovation, account management and various technical roles. When he's not working or dadding, he's skiing, golfing, gaming and trying to carve out some peace and quiet.</p>
+                  <p>Making technology accessible and approachable is where Rhys spends his time. Finding solutions that make people's lives easier drives his work, and if he can achieve that while drinking coffee and chatting, even better. He's spent more than a decade in tech, gaining experience in product innovation, account management and various technical roles. When he's not working or dadding, he's skiing, golfing, gaming and trying to carve out some peace and quiet.</p>
                   <div class="fancy-pants-font js-blog-link" data-blog-link="/author/rhys"></div>
                 </div>
               </div>
