Update Brad and Zach bios, add placeholder for Arie and Steve F

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -217,6 +217,47 @@ menuorder: 4
       </div>
       <!-- .person-wrap -->
 
+      <!-- Arie -->
+      <div id="person-arie" class="person-wrap js-iso-element">
+        <a href="#" class="person js-show-bio">
+          <div class="loader icon-spin1"></div>
+          <img class="person-image" src="{{ "/img/people/no-image-ill.png " | prepend: site.baseurl }}" alt="Arie Van Der Poel" />
+          <span class="burst-wrap scale-in">
+            <span class="burst-text fancy-pants-font lowercase">Bio</span>
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png " | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png " | prepend: site.baseurl }}" alt="" />
+          </span>
+        </a>
+        <div class="bio-wrap">
+          <div class="bio-inner">
+            <div class="faux-table">
+              <div class="faux-table-cell">
+                <div class="bio-head">
+                  <h2 class="bio-heading">Arie Van Der Poel</h2>
+                  <h3 class="bio-sub">Full Stack Developer</h3>
+                  <span class="linkedin-container">
+                    <a href="https://www.linkedin.com/in/arie-van-der-poel-uk/" class="linkedin-link" target="_blank">
+                      <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
+                    </a>
+                  </span>
+                  <!-- <div class="js-image-fill bio-real-image">
+                    <img src="{{ "/img/people/real-andrew.jpg" | prepend: site.baseurl }}" alt="Arie Van Der Poel" />
+                  </div> -->
+                </div>
+                <div class="bio-body">
+                  <p>Bio coming soon!</p>
+                  <!-- <div class="fancy-pants-font js-blog-link" data-blog-link="/author/arie"></div> -->
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- .bio-inner -->
+        </div>
+        <!-- .bio-wrap -->
+        <h3 class="person-name-hover">Arie</h3>
+      </div>
+      <!-- .person-wrap -->
+
       <!-- Chris -->
       <div id="person-chris" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
@@ -286,7 +327,7 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>Bio coming soon!</p>
+                  <p>Landing a commercial plane full of people was just another day at the office for Brad. Rest assured, he's a reliable kinda guy and a top notch communicator. These days, he's earning his stripes as a developer, and knocking it out of the park. He loves building things that make our lives better, obsessing over golf and being a "cricket tragic".</p>
                   <div class="fancy-pants-font js-blog-link" data-blog-link="/author/brad"></div>
                 </div>
               </div>
@@ -1172,7 +1213,48 @@ menuorder: 4
       </div>
       <!-- .person-wrap -->
 
-      <!-- Steve -->
+      <!-- Steve F -->
+      <div id="person-steve-f" class="person-wrap js-iso-element">
+        <a href="#" class="person js-show-bio">
+          <div class="loader icon-spin1"></div>
+          <img class="person-image" src="{{ "/img/people/no-image-ill.png " | prepend: site.baseurl }}" alt="Steve Foster" />
+          <span class="burst-wrap scale-in">
+            <span class="burst-text fancy-pants-font lowercase">Bio</span>
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png " | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png " | prepend: site.baseurl }}" alt="" />
+          </span>
+        </a>
+        <div class="bio-wrap">
+          <div class="bio-inner">
+            <div class="faux-table">
+              <div class="faux-table-cell">
+                <div class="bio-head">
+                  <h2 class="bio-heading">Steve Foster</h2>
+                  <h3 class="bio-sub">Dev Ops Manager</h3>
+                  <span class="linkedin-container">
+                    <a href="https://www.linkedin.com/in/steve-foster-99612858/" class="linkedin-link" target="_blank">
+                      <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
+                    </a>
+                  </span>
+                  <!-- <div class="js-image-fill bio-real-image">
+                    <img src="{{ "/img/people/real-steve.jpg" | prepend: site.baseurl }}" alt="Steve Foster" />
+                  </div> -->
+                </div>
+                <div class="bio-body">
+                  <p>Bio coming soon!</p>
+                  <!-- <div class="fancy-pants-font js-blog-link" data-blog-link="/author/steve-f"></div> -->
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- .bio-inner -->
+        </div>
+        <!-- .bio-wrap -->
+        <h3 class="person-name-hover">Steve F</h3>
+      </div>
+      <!-- .person-wrap -->
+
+      <!-- Steve L -->
       <div id="person-steve" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
@@ -1209,7 +1291,7 @@ menuorder: 4
           <!-- .bio-inner -->
         </div>
         <!-- .bio-wrap -->
-        <h3 class="person-name-hover">Steve</h3>
+        <h3 class="person-name-hover">Steve L</h3>
       </div>
       <!-- .person-wrap -->
 
@@ -1312,7 +1394,7 @@ menuorder: 4
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">Zachary Schroeder</h2>
-                  <h3 class="bio-sub">Project Manager</h3>
+                  <h3 class="bio-sub">Project Lead</h3>
                   <span class="linkedin-container">
                     <a href="https://www.linkedin.com/in/zacharydschroeder/" class="linkedin-link" target="_blank">
                       <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
@@ -1323,7 +1405,7 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>Bio coming soon!</p>
+                  <p>Zach is a man of action and a Master (literally) of User Experience Design. He’s the guy to get things done, deftly delivering quality, on time and under budget. Transparency, a love of teamwork and true passion for Agile drives his project leadership - as well as experience as a scrum master, business systems analyst and software engineering management. American born, Zach chose to make Christchurch his home, enjoying all the rugged beauty the South Island has to offer with his wife, Ashley, and two dogs - Sady and Monti.</p>
                   <div class="fancy-pants-font js-blog-link" data-blog-link="/author/zachary"></div>
                 </div>
               </div>
