Add placeholder for Shannon

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -221,7 +221,7 @@ menuorder: 4
       <div id="person-arie" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image" src="{{ "/img/people/no-image-ill.png " | prepend: site.baseurl }}" alt="Arie Van Der Poel" />
+          <img class="person-image" src="{{ "/img/people/placeholder-male.png " | prepend: site.baseurl }}" alt="Arie Van Der Poel" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png " | prepend: site.baseurl }}" alt="" />
@@ -1131,6 +1131,47 @@ menuorder: 4
       </div>
       <!-- .person-wrap -->
 
+      <!-- Shannon -->
+      <div id="person-shannon" class="person-wrap js-iso-element">
+        <a href="#" class="person js-show-bio">
+          <div class="loader icon-spin1"></div>
+          <img class="person-image" src="{{ "/img/people/placeholder-female.png " | prepend: site.baseurl }}" alt="Shannon Tamati" />
+          <span class="burst-wrap scale-in">
+            <span class="burst-text fancy-pants-font lowercase">Bio</span>
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png " | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png " | prepend: site.baseurl }}" alt="" />
+          </span>
+        </a>
+        <div class="bio-wrap">
+          <div class="bio-inner">
+            <div class="faux-table">
+              <div class="faux-table-cell">
+                <div class="bio-head">
+                  <h2 class="bio-heading">Shannon Tamati</h2>
+                  <h3 class="bio-sub">Team Support and Admin</h3>
+                  <span class="linkedin-container">
+                    <a href="https://www.linkedin.com/in/shannon-h-2992671b2/" class="linkedin-link" target="_blank">
+                      <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
+                    </a>
+                  </span>
+                  <!-- <div class="js-image-fill bio-real-image">
+                    <img src="{{ "/img/people/real-andrew.jpg" | prepend: site.baseurl }}" alt="Shannon Tamati" />
+                  </div> -->
+                </div>
+                <div class="bio-body">
+                  <p>Bio coming soon!</p>
+                  <!-- <div class="fancy-pants-font js-blog-link" data-blog-link="/author/shannon"></div> -->
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- .bio-inner -->
+        </div>
+        <!-- .bio-wrap -->
+        <h3 class="person-name-hover">Shannon</h3>
+      </div>
+      <!-- .person-wrap -->
+
       <!-- Sharmaine -->
       <div id="person-sharmaine" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
@@ -1217,7 +1258,7 @@ menuorder: 4
       <div id="person-steve-f" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image" src="{{ "/img/people/no-image-ill.png " | prepend: site.baseurl }}" alt="Steve Foster" />
+          <img class="person-image" src="{{ "/img/people/placeholder-male.png " | prepend: site.baseurl }}" alt="Steve Foster" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png " | prepend: site.baseurl }}" alt="" />
