Update preferred names/role descriptions

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -31,7 +31,7 @@ menuorder: 4
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">Abbie Reid</h2>
-                  <h3 class="bio-sub">Studio Manager and Client Guru</h3>
+                  <h3 class="bio-sub">Programme Coordinator and Communicator</h3>
                   <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-abbie.jpg" | prepend: site.baseurl }}" alt="Abbie Reid" />
                   </div>
@@ -931,10 +931,10 @@ menuorder: 4
       <!-- .person-wrap -->
 
       <!-- Mel -->
-      <div id="person-melanie" class="person-wrap js-iso-element">
+      <div id="person-mel" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image" src="{{ "/img/people/placeholder-female.png " | prepend: site.baseurl }}" alt="Melanie Gallo" />
+          <img class="person-image" src="{{ "/img/people/placeholder-female.png " | prepend: site.baseurl }}" alt="Mel Gallo" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png " | prepend: site.baseurl }}" alt="" />
@@ -946,7 +946,7 @@ menuorder: 4
             <div class="faux-table">
               <div class="faux-table-cell">
                 <div class="bio-head">
-                  <h2 class="bio-heading">Melanie Gallo</h2>
+                  <h2 class="bio-heading">Mel Gallo</h2>
                   <h3 class="bio-sub">Application Support Analyst</h3>
                   <span class="linkedin-container">
                     <a href="https://www.linkedin.com/in/melanie-gallo-65821016/" class="linkedin-link" target="_blank">
@@ -954,12 +954,12 @@ menuorder: 4
                     </a>
                   </span>
                   <!-- <div class="js-image-fill bio-real-image">
-                    <img src="{{ "/img/people/real-melanie.jpg" | prepend: site.baseurl }}" alt="https://www.linkedin.com/in/melanie-gallo-65821016/" />
+                    <img src="{{ "/img/people/real-mel.jpg" | prepend: site.baseurl }}" alt="https://www.linkedin.com/in/melanie-gallo-65821016/" />
                   </div> -->
                 </div>
                 <div class="bio-body">
                   <p>If there's a role out there with 'tech support' in the title, chances are, Mel has done it. For over a decade, she has been on the front line and behind the scenes, supporting users to get the best from technology and building their trust. She brings a wealth of experience to Media Suite's passionate support team. A vegetarian from the home of meat (Argentina), Mel has a true and lasting passion for food and dance, and a friendly prank to keep her team on its toes.</p>
-                  <!-- <div class="fancy-pants-font js-blog-link" data-blog-link="/author/melanie"></div> -->
+                  <!-- <div class="fancy-pants-font js-blog-link" data-blog-link="/author/mel"></div> -->
                 </div>
               </div>
             </div>
@@ -967,7 +967,7 @@ menuorder: 4
           <!-- .bio-inner -->
         </div>
         <!-- .bio-wrap -->
-        <h3 class="person-name-hover">Melanie</h3>
+        <h3 class="person-name-hover">Mel</h3>
       </div>
       <!-- .person-wrap -->
 
@@ -1111,7 +1111,7 @@ menuorder: 4
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">Shannon Tamati</h2>
-                  <h3 class="bio-sub">Team Support and Admin</h3>
+                  <h3 class="bio-sub">Team Administrator and Coordinator</h3>
                   <span class="linkedin-container">
                     <a href="https://www.linkedin.com/in/shannon-h-2992671b2/" class="linkedin-link" target="_blank">
                       <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
