--- a/src/people/index.html
+++ b/src/people/index.html
@@ -1151,7 +1151,7 @@ menuorder: 4
             <div class="faux-table">
               <div class="faux-table-cell">
                 <div class="bio-head">
-                  <h2 class="bio-heading">Sharmaine Vinzon</h2>
+                  <h2 class="bio-heading">Sharmaine Artagame Vinzon</h2>
                   <h3 class="bio-sub">Office Manager and Administrator</h3>
                   <span class="linkedin-container">
                     <a href="https://www.linkedin.com/in/sharmaine-vinzon-33a870113/" class="linkedin-link" target="_blank">
