Add Arie and Steve F illustrations and photos

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -221,7 +221,7 @@ menuorder: 4
       <div id="person-arie" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image" src="{{ "/img/people/placeholder-male.png " | prepend: site.baseurl }}" alt="Arie Van Der Poel" />
+          <img class="person-image" src="{{ "/img/people/arie.png " | prepend: site.baseurl }}" alt="Arie Van Der Poel" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png " | prepend: site.baseurl }}" alt="" />
@@ -240,9 +240,9 @@ menuorder: 4
                       <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
                     </a>
                   </span>
-                  <!-- <div class="js-image-fill bio-real-image">
+                  <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-arie.jpg" | prepend: site.baseurl }}" alt="Arie Van Der Poel" />
-                  </div> -->
+                  </div>
                 </div>
                 <div class="bio-body">
                   <p>Musicians are credited with being some of the most divergent thinkers in the world, using both halves of their brain more than most. Arie, former sound engineer and recording studio owner, comes to the role of developer with both halves of his brain hitting the ground running. He's a problem solver and inventor at heart, thriving on the diversity of his days and the challenges that software brings. Weekends find Arie out for a long hike and absorbing nature.</p>
@@ -1221,7 +1221,7 @@ menuorder: 4
       <div id="person-steve-f" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image" src="{{ "/img/people/placeholder-male.png " | prepend: site.baseurl }}" alt="Steve Foster" />
+          <img class="person-image" src="{{ "/img/people/steve-f.png " | prepend: site.baseurl }}" alt="Steve Foster" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png " | prepend: site.baseurl }}" alt="" />
@@ -1240,9 +1240,9 @@ menuorder: 4
                       <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
                     </a>
                   </span>
-                  <!-- <div class="js-image-fill bio-real-image">
-                    <img src="{{ "/img/people/real-steve.jpg" | prepend: site.baseurl }}" alt="Steve Foster" />
-                  </div> -->
+                  <div class="js-image-fill bio-real-image">
+                    <img src="{{ "/img/people/real-steve-f.jpg" | prepend: site.baseurl }}" alt="Steve Foster" />
+                  </div>
                 </div>
                 <div class="bio-body">
                   <p>What do you get when you combine 20 years of DevOps and SysOps experience with a head full of obscure knowledge, a red speedo and a passion for DIY, and craft beer? Well, you get Steve - the Sumner-based British expat keeping the Media Suite lights on (and shining at premium brightness). Steve specialises in fault finding, optimising systems and processes and ensuring our projects get the love and care they deserve long after they venture out into the real world. Ask him about his free range backyard rabbits&hellip;</p>
