Add Mel and Shannon photos/illustrations

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -934,7 +934,7 @@ menuorder: 4
       <div id="person-mel" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image" src="{{ "/img/people/placeholder-female.png " | prepend: site.baseurl }}" alt="Mel Gallo" />
+          <img class="person-image" src="{{ "/img/people/mel.png " | prepend: site.baseurl }}" alt="Mel Gallo" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png " | prepend: site.baseurl }}" alt="" />
@@ -953,9 +953,9 @@ menuorder: 4
                       <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
                     </a>
                   </span>
-                  <!-- <div class="js-image-fill bio-real-image">
+                  <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-mel.jpg" | prepend: site.baseurl }}" alt="https://www.linkedin.com/in/melanie-gallo-65821016/" />
-                  </div> -->
+                  </div>
                 </div>
                 <div class="bio-body">
                   <p>If there's a role out there with 'tech support' in the title, chances are, Mel has done it. For over a decade, she has been on the front line and behind the scenes, supporting users to get the best from technology and building their trust. She brings a wealth of experience to Media Suite's passionate support team. A vegetarian from the home of meat (Argentina), Mel has a true and lasting passion for food and dance, and a friendly prank to keep her team on its toes.</p>
@@ -1098,7 +1098,7 @@ menuorder: 4
       <div id="person-shannon" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image" src="{{ "/img/people/placeholder-female.png " | prepend: site.baseurl }}" alt="Shannon Tamati" />
+          <img class="person-image" src="{{ "/img/people/shannon.png " | prepend: site.baseurl }}" alt="Shannon Tamati" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png " | prepend: site.baseurl }}" alt="" />
@@ -1117,9 +1117,9 @@ menuorder: 4
                       <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
                     </a>
                   </span>
-                  <!-- <div class="js-image-fill bio-real-image">
+                  <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-shannon.jpg" | prepend: site.baseurl }}" alt="Shannon Tamati" />
-                  </div> -->
+                  </div>
                 </div>
                 <div class="bio-body">
                   <p>There are many things close to Shannon's heart - Elvis, her two labradors Hades and Hera, time spent with family and friends, and a good hot chocolate (in no particular order). With a background in teaching, she's perfectly equipped to light a fire under the team with her eye for detail, organisational magic and unrivaled ability to keep us all humming. Shannon always has our values squarely in her sights, bringing her own brand of awesome to ensure we are living them every day.</p>
