Add placeholder profile for Sarah

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -1094,6 +1094,47 @@ menuorder: 4
       </div>
       <!-- .person-wrap -->
 
+      <!-- Sarah -->
+      <div id="person-sarah" class="person-wrap js-iso-element">
+        <a href="#" class="person js-show-bio">
+          <div class="loader icon-spin1"></div>
+          <img class="person-image" src="{{ "/img/people/placeholder-female.png " | prepend: site.baseurl }}" alt="Sarah Jackson" />
+          <span class="burst-wrap scale-in">
+            <span class="burst-text fancy-pants-font lowercase">Bio</span>
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png " | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png " | prepend: site.baseurl }}" alt="" />
+          </span>
+        </a>
+        <div class="bio-wrap">
+          <div class="bio-inner">
+            <div class="faux-table">
+              <div class="faux-table-cell">
+                <div class="bio-head">
+                  <h2 class="bio-heading">Sarah Jackson</h2>
+                  <h3 class="bio-sub">Intermediate Full Stack Developer</h3>
+                  <span class="linkedin-container">
+                    <a href="https://www.linkedin.com/in/sarah-jackson-375821b9" class="linkedin-link" target="_blank">
+                      <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
+                    </a>
+                  </span>
+                  <!-- <div class="js-image-fill bio-real-image">
+                    <img src="{{ "/img/people/real-shannon.jpg" | prepend: site.baseurl }}" alt="Sarah Jackson" />
+                  </div> -->
+                </div>
+                <div class="bio-body">
+                  <p>Bio coming soon!</p>
+                  <!-- <div class="fancy-pants-font js-blog-link" data-blog-link="/author/shannon"></div> -->
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- .bio-inner -->
+        </div>
+        <!-- .bio-wrap -->
+        <h3 class="person-name-hover">Sarah</h3>
+      </div>
+      <!-- .person-wrap -->
+
       <!-- Shannon -->
       <div id="person-shannon" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
@@ -1123,7 +1164,7 @@ menuorder: 4
                 </div>
                 <div class="bio-body">
                   <p>There are many things close to Shannon's heart - Elvis, her two labradors Hades and Hera, time spent with family and friends, and a good hot chocolate (in no particular order). With a background in teaching, she's perfectly equipped to light a fire under the team with her eye for detail, organisational magic and unrivaled ability to keep us all humming. Shannon always has our values squarely in her sights, bringing her own brand of awesome to ensure we are living them every day.</p>
-                  <!-- <div class="fancy-pants-font js-blog-link" data-blog-link="/author/shannon"></div> -->
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/shannon"></div>
                 </div>
               </div>
             </div>
